--- a/css/omegat.css
+++ b/css/omegat.css
@@ -152,8 +152,44 @@ ul.languages {
   -moz-columns: 3;
   background-color: #d5e4bf; }
 
+#download-wizard .navbar {
+  background-color: inherit; }
+#download-wizard .nav-pills > li.active > a, #download-wizard .nav-pills > li.active > a:focus, #download-wizard .nav-pills > li.active > a:hover {
+  background-color: #88B04B; }
+#download-wizard .tab-content {
+  padding: 15px;
+  font-size: 120%;
+  background-color: #fefefe;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.7); }
+#download-wizard .radio {
+  margin-bottom: 20px; }
+  #download-wizard .radio label {
+    font-weight: 600; }
+
+#downloadSelector h5 {
+  font-weight: 600;
+  text-align: center; }
+
+.selector-choice {
+  text-align: justify;
+  background-color: #efefef;
+  margin: 15px 10px 2px 10px;
+  padding: 15px;
+  width: 23%;
+  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.7); }
+
+.selector-choice-default {
+  background-color: #d6d6d6; }
+
+.selector-btn {
+  width: 23%;
+  text-align: center; }
+
 .versions {
   margin: auto 20%; }
+  .versions a {
+    color: #fff; }
 
 .im-centered {
   margin: auto;
@@ -162,6 +198,10 @@ ul.languages {
 .im-centered img {
   box-shadow: -1px 2px 5px 1px rgba(0, 0, 0, 0.7);
   margin: 15px auto; }
+
+.downloads .popover {
+  cursor: pointer;
+  max-width: 50%; }
 
 #page-omegat-and-you {
   background-color: #efefef; }
